Clean up based on modernizer